# libsnark-tutorial

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  get-libsnark  proof_data  vk_data
depends/: CMakeLists.txt
ethereum/contracts/: Verifier.sol
ethereum/test/: TestVerifier.js
src/: CMakeLists.txt  compose-gadget.cpp  composed-gadget.hpp  gadget.hpp  poly_gadget.hpp  square_gadget.hpp  test-gadget.cpp  test.cpp  util.hpp
src/ethereum/: truffle.js
src/ethereum/contracts/: Verifier.sol
src/ethereum/migrations/: 2_deploy_contracts.js
src/ethereum/test/: TestVerifier.js
truffle/contracts/: Verifier.sol
